Pixel Fantasy Fix ScrollBar hidden will be top problem

--- a/PixelFantasy/sass/index.sass
+++ b/PixelFantasy/sass/index.sass
@@ -35,8 +35,14 @@ body
     .container
         padding-top: 0px
 
+/* Hide scrollbar for IE, Edge and Firefox */
 .containerScrollHidden
-    overflow: hidden
+    -ms-overflow-style: none  // IE and Edge
+    scrollbar-width: none  // Firefox
+
+/* Hide scrollbar for Chrome, Safari and Opera */
+.containerScrollHidden::-webkit-scrollbar
+    display: none
 
 @import _nav
                 
